# bowlards

./: .env.local  .gitignore  .rules  Makefile  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  env.example  env.local.example  env.production.example  firebase.json.emulator  package.json  start_firebase.sh
.claude/: settings.local.json
.cursor/rules/: backend.mdc  design.mdc  global.mdc
.serena/: project.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  FIRESTORE_INDEX_SETUP.md  Makefile  README.md  env.example  firestore.indexes.json  pyproject.toml  test_firebase_connection.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/auth/: __init__.py  dependencies.py  firebase.production.py  firebase.py
backend/app/models/: __init__.py  common.py  game.py  user.py
backend/app/repositories/: __init__.py  game_repository.py  user_repository.py
backend/app/routers/: games.py  users.py
backend/app/services/: __init__.py  game_service.py  user_service.py
backend/app/utils/: logging.py  scoring.py
backend/scripts/: get_firebase_token.py
backend/tests/: conftest.py  test_main.py
credentials/: .gitignore  README.md
docker/backend/: Dockerfile  Dockerfile.dev  entrypoint.dev.sh
docker/frontend/: Dockerfile  vite.config.ts
docker/nginx/: nginx.conf
docs/: TESTING_WITH_SWAGGER.md  api-design.md  backend-overall-design.md  browser-console-snippet.js  database-design.md  development-environment-design.md  environment-variables-guide.md  fastapi-api-design.md  fastapi-backend-design.md  fastapi-database-design.md  fastapi-docker-design.md  fastapi-firebase-authentication-design.md  firebase-authentication-design.md  firebase-authentication-flow.md  frontend-overall-design.md  game-history-design.md  game-record-creation-design.md  game-save-implementation.md  how-to-get-firebase-credentials.md  production-deployment-guide.md  scoring.md  screen-design.md  setup-guide-firebase.md  swagger-testing-guide.md  ui-ux-design.md
frontend/: .dockerignore  .firebaserc  .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  firebase.ts  main.tsx  vite-env.d.ts
frontend/src/components/: AuthForm.tsx  Dashboard.tsx  GameDetail.tsx  GameHistory.tsx  GameRecord.tsx  UserProfile.tsx
frontend/src/firebase/: config.production.ts  config.ts
frontend/src/services/: api.ts  gameService.ts
